# lilak

./: .gitignore  CMakeLists.txt  README.md  configure.py  create_project.py  lilak.sh
common/: geant4_nptool_vis.mac  geant4_vis.mac  nptool_parameter_PhysicsListOption.mac  nptool_parameter_Reaction_AlphaDecay.mac  nptool_parameter_Reaction_Beam.mac  nptool_parameter_Reaction_Isotropic.mac  nptool_parameter_Reaction_TwoBodyReaction.mac  nptool_parameter_list.mac  nptool_parameter_project_config.mac  pulseReference.root
example/: config.json  read.C
examples/drawing/: data_viewer.C  draw.C  example_functions.h  make_cluster.C  make_drawing.C  make_group.C
examples/geometry/: draw_polygon.C
examples/hough_transform/: hough_transform_histogram_input.C  hough_transform_hit_input.C  hough_transform_point_input.C
examples/logger/: example_log.txt  run_logger.C
examples/mfm_decoder/: config_conversion.mac  run_conversion.C
examples/odr_fitter/: odr_fitter_and_weight.C
examples/parameter_container/: README  clone_parameters.C  collect_parameters.C  environment_var.mac  example.mac  example_clone.mac  parameter_referencing.C  read_parameters.C  read_parameters_with_env_var.C  user_parameters.mac
examples/pulse_shape_analysis/: histograms.root  make_dummy_pulse_data.C  run_pulse_extraction.C  run_pulse_shape_analysis.C  test_pedestal_production.C
examples/python_macros/: example.mac  run_and_collect_parameters.py
examples/watcher_server/: CMakeLists.txt  server.cc
exproject/: CMakeLists.txt
exproject/container/: LKWPoint.cpp  LKWPoint.hpp
exproject/macros/: logging.C  run_test.C
exproject/task/: LKRandomGausCreator.cpp  LKRandomPointCreator.cpp  LKRandomPointCreator.hpp
exproject/test/: LKWPoint.cc  LKWPoint.hh  LKWPoint.hpp
log/: LKBranchList.log.in  LKCompiled.h.in  LKLog.cmake.in  LinkDef.h.in  doxy.conf.in
macros/: geant4_simulation.cc  lilak_configuration.py  lilak_configure_flow_editor.py  lilak_parameter_editor.py  lilak_si_mapping_editor.py  lilak_web_format.py  make_draw_lilak_macro.py  make_read_lilak_macro.py  nptool_simulation.cc  project_class_creator.py  rootlogon.C  run_lilak.C  run_tree_draw.C  setup_lilak.csh
macros/dummy_class_writter/: lilakcc.py  make_container.py  make_detector.py  make_geant4.py  make_task.py  make_tool.py
macros/mfm_decoder/: config_conv.mac  config_online.mac  run_conv.C  run_online.C
macros/watcherServer/: CMakeLists.txt
meta/: LKClassList.log.in  LKCompiledDiff.log.in  LKCompiledStatus.log.in  LKCompiledTags.log.in  LKLog.cmake  LKLog.cmake.in  build_options.cmake  doxy.conf  lilak_read_getters.conf  lilak_read_members.conf  nptool_nplib_options.conf
meta/parameters/: branch_ATConvertNPToolHit.par  branch_ATFastHitReconstruction.par  branch_EKEnergyRestorationTask.par  branch_EKReconstructHitTask.par  branch_EKShortCutTask.par  branch_LKDetectorPlane.par  branch_LKGETChannelViewer.par  branch_LKGETConversionTask.par  branch_LKHTTrackingTask.par  branch_LKMTEMergerTask.par  branch_LKPulseExtractionTask.par  branch_LKPulseShapeAnalysisTask.par  branch_SKDrawCalibratedEventStatisticsTask.par  branch_SKDrawWaveformTask.par  branch_SKEnergyRestorationTask.par  branch_SKPairMatchingTask.par  branch_SKScintillatorFilterTask.par  branch_SKSetSiChannelTask.par  configure_ATConvertNPToolHit.mac  configure_ATFastHitReconstruction.mac  configure_ATMicromegas.mac  configure_AToMX.mac  configure_EKAnalysisRecoHit.mac  configure_EKEnergyRestorationTask.mac  configure_EKReconstructHitTask.mac  configure_EKSetSiChannelTask.mac  configure_EKShortAnalysisRecoHit.mac  configure_EKShortCutTask.mac  configure_ELARK.mac  configure_LKDetector.mac  configure_LKDetectorPlane.mac  configure_LKEvePlane.mac  configure_LKEveTask.mac  configure_LKGETChannelViewer.mac  configure_LKGETConversionTask.mac  configure_LKHTTrackingTask.mac  configure_LKMTEMergerTask.mac  configure_LKMicromegas.mac  configure_LKNoiseSubtractionTask.mac  configure_LKPolygonPadPlane.mac  (+16 more)
source/base/: LKContainer.cc  LKContainer.cpp  LKContainer.hpp  LKEveTask.cpp  LKEveTask.h  LKEveTask.hpp  LKGear.cc  LKGear.cpp  LKGear.h  LKGear.hh  LKGear.hpp  LKLogger.cc  LKLogger.cpp  LKLogger.h  LKLogger.hh  LKLogger.hpp  LKParameter.cpp  LKParameter.h  LKParameter.hpp  LKParameterContainer.cc  LKParameterContainer.cpp  LKParameterContainer.h  LKParameterContainer.hh  LKParameterContainer.hpp  LKRun.cc  LKRun.cpp  LKRun.h  LKRun.hh  LKRun.hpp  LKTask.cc  LKTask.cpp  LKTask.h  LKTask.hh  LKTask.hpp  LKTestRun.cpp  LKTestRun.h  LKVirtualRun.cpp  LKVirtualRun.h  LinkDef.h
source/container/: CAACMapData.cpp  CAACMapData.h  LKChannel.hpp  LKContainer.cpp  LKContainer.h  LKContainer.hpp  LKEventHeader.cpp  LKEventHeader.h  LKHit.cpp  LKHit.hpp  LKHitArray.cpp  LKHitArray.hpp  LKMCStep.cpp  LKMCStep.hpp  LKMCTag.cpp  LKMCTag.h  LKMCTagged.cpp  LKMCTagged.h  LKMCTagged.hpp  LKPulseFitData.cpp  LKPulseFitData.h  LKTracklet.cpp  LKTracklet.hpp  LKWPoint.cpp  LKWPoint.hpp  LinkDef.h
source/detector/: LKATTPC.cpp  LKATTPC.h  LKDetector.cpp  LKDetector.h  LKDetector.hpp  LKDetectorPlane.cpp  LKDetectorPlane.h  LKDetectorPlane.hpp  LKDetectorSystem.cpp  LKDetectorSystem.h  LKDetectorSystem.hpp  LKEvePlane.cpp  LKEvePlane.h  LKMicromegas.cpp  LKMicromegas.h  LKPadPlane.cpp  LKPadPlane.h  LKPadPlane.hpp  LKPolygonPadPlane.cpp  LKPolygonPadPlane.h  LKTpc.cpp  LKTpc.h  LKTpc.hpp  LinkDef.h
source/geant4/: LKDetectorConstruction.cpp  LKDetectorConstruction.h  LKEventAction.cc  LKEventAction.cpp  LKEventAction.h  LKEventAction.hh  LKEventAction.hpp  LKG4RunManager.cc  LKG4RunManager.cpp  LKG4RunManager.h  LKG4RunManager.hh  LKG4RunManager.hpp  LKG4RunMessenger.cc  LKG4RunMessenger.cpp  LKG4RunMessenger.h  LKG4RunMessenger.hh  LKG4RunMessenger.hpp  LKMCEventGenerator.cc  LKMCEventGenerator.cpp  LKMCEventGenerator.h  LKMCEventGenerator.hh  LKMCEventGenerator.hpp  LKPrimaryGeneratorAction.cc  LKPrimaryGeneratorAction.cpp  LKPrimaryGeneratorAction.h  LKPrimaryGeneratorAction.hh  LKPrimaryGeneratorAction.hpp  LKStackingAction.cpp  LKStackingAction.h  LKSteppingAction.cc  LKSteppingAction.h  (+8 more)
(+235 files in other folders)
